// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Container Tests should match snapshot when there are decks 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Footer
    addDecks={[Function]}
    addSelectedDecks={[Function]}
    currentDecks={
        Array [
            Object {
              "cards": Array [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
              ],
              "class": "Brute",
              "deckId": 1,
              "deckName": "Hello",
            },
            Object {
              "cards": Array [
                10,
                2,
                3,
                12,
                5,
                6,
                7,
                8,
              ],
              "class": "Cragheart",
              "deckId": 12,
              "deckName": "Friend",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="saved-decks-tab"
>
          <h1
                    className="saved-decks-title"
          >
                    SAVED DECKS
          </h1>
</div>,
        <div
          className="saved-decks-container"
>
          <div>
                    <p
                              className="sign-in-request"
                    >
                              Please sign-in:
                    </p>
                    <FirebaseAuth
                              firebaseAuth={
                                        Object {
                                                  "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                  "appName": "[DEFAULT]",
                                                  "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                  "currentUser": null,
                                                }
                              }
                              uiCallback={[Function]}
                              uiConfig={
                                        Object {
                                                  "callbacks": Object {
                                                    "signInSuccessWithAuthResult": [Function],
                                                  },
                                                  "signInFlow": "popup",
                                                  "signInOptions": Array [
                                                    "google.com",
                                                    "facebook.com",
                                                  ],
                                                }
                              }
                    />
          </div>
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h1
            className="saved-decks-title"
>
            SAVED DECKS
</h1>,
          "className": "saved-decks-tab",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "SAVED DECKS",
            "className": "saved-decks-title",
          },
          "ref": null,
          "rendered": "SAVED DECKS",
          "type": "h1",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <p
                        className="sign-in-request"
            >
                        Please sign-in:
            </p>
            <FirebaseAuth
                        firebaseAuth={
                                    Object {
                                                "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                "appName": "[DEFAULT]",
                                                "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                "currentUser": null,
                                              }
                        }
                        uiCallback={[Function]}
                        uiConfig={
                                    Object {
                                                "callbacks": Object {
                                                  "signInSuccessWithAuthResult": [Function],
                                                },
                                                "signInFlow": "popup",
                                                "signInOptions": Array [
                                                  "google.com",
                                                  "facebook.com",
                                                ],
                                              }
                        }
            />
</div>,
          "className": "saved-decks-container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="sign-in-request"
>
                Please sign-in:
</p>,
              <FirebaseAuth
                firebaseAuth={
                                Object {
                                                "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                "appName": "[DEFAULT]",
                                                "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                "currentUser": null,
                                              }
                }
                uiCallback={[Function]}
                uiConfig={
                                Object {
                                                "callbacks": Object {
                                                  "signInSuccessWithAuthResult": [Function],
                                                },
                                                "signInFlow": "popup",
                                                "signInOptions": Array [
                                                  "google.com",
                                                  "facebook.com",
                                                ],
                                              }
                }
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Please sign-in:",
                "className": "sign-in-request",
              },
              "ref": null,
              "rendered": "Please sign-in:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "firebaseAuth": Object {
                  "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                  "appName": "[DEFAULT]",
                  "authDomain": "gh-deckbuilder.firebaseapp.com",
                  "currentUser": null,
                },
                "uiCallback": [Function],
                "uiConfig": Object {
                  "callbacks": Object {
                    "signInSuccessWithAuthResult": [Function],
                  },
                  "signInFlow": "popup",
                  "signInOptions": Array [
                    "google.com",
                    "facebook.com",
                  ],
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="saved-decks-tab"
>
            <h1
                        className="saved-decks-title"
            >
                        SAVED DECKS
            </h1>
</div>,
          <div
            className="saved-decks-container"
>
            <div>
                        <p
                                    className="sign-in-request"
                        >
                                    Please sign-in:
                        </p>
                        <FirebaseAuth
                                    firebaseAuth={
                                                Object {
                                                            "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                            "appName": "[DEFAULT]",
                                                            "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                            "currentUser": null,
                                                          }
                                    }
                                    uiCallback={[Function]}
                                    uiConfig={
                                                Object {
                                                            "callbacks": Object {
                                                              "signInSuccessWithAuthResult": [Function],
                                                            },
                                                            "signInFlow": "popup",
                                                            "signInOptions": Array [
                                                              "google.com",
                                                              "facebook.com",
                                                            ],
                                                          }
                                    }
                        />
            </div>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h1
              className="saved-decks-title"
>
              SAVED DECKS
</h1>,
            "className": "saved-decks-tab",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "SAVED DECKS",
              "className": "saved-decks-title",
            },
            "ref": null,
            "rendered": "SAVED DECKS",
            "type": "h1",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <p
                            className="sign-in-request"
              >
                            Please sign-in:
              </p>
              <FirebaseAuth
                            firebaseAuth={
                                          Object {
                                                        "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                        "appName": "[DEFAULT]",
                                                        "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                        "currentUser": null,
                                                      }
                            }
                            uiCallback={[Function]}
                            uiConfig={
                                          Object {
                                                        "callbacks": Object {
                                                          "signInSuccessWithAuthResult": [Function],
                                                        },
                                                        "signInFlow": "popup",
                                                        "signInOptions": Array [
                                                          "google.com",
                                                          "facebook.com",
                                                        ],
                                                      }
                            }
              />
</div>,
            "className": "saved-decks-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="sign-in-request"
>
                  Please sign-in:
</p>,
                <FirebaseAuth
                  firebaseAuth={
                                    Object {
                                                      "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                      "appName": "[DEFAULT]",
                                                      "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                      "currentUser": null,
                                                    }
                  }
                  uiCallback={[Function]}
                  uiConfig={
                                    Object {
                                                      "callbacks": Object {
                                                        "signInSuccessWithAuthResult": [Function],
                                                      },
                                                      "signInFlow": "popup",
                                                      "signInOptions": Array [
                                                        "google.com",
                                                        "facebook.com",
                                                      ],
                                                    }
                  }
/>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Please sign-in:",
                  "className": "sign-in-request",
                },
                "ref": null,
                "rendered": "Please sign-in:",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "firebaseAuth": Object {
                    "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                    "appName": "[DEFAULT]",
                    "authDomain": "gh-deckbuilder.firebaseapp.com",
                    "currentUser": null,
                  },
                  "uiCallback": [Function],
                  "uiConfig": Object {
                    "callbacks": Object {
                      "signInSuccessWithAuthResult": [Function],
                    },
                    "signInFlow": "popup",
                    "signInOptions": Array [
                      "google.com",
                      "facebook.com",
                    ],
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Footer component Container Tests should match the snapshot when there are no decks 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Footer
    addDecks={[Function]}
    addSelectedDecks={[Function]}
    currentDecks={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="saved-decks-tab"
>
          <h1
                    className="saved-decks-title"
          >
                    SAVED DECKS
          </h1>
</div>,
        <div
          className="saved-decks-container"
>
          <div>
                    <p
                              className="sign-in-request"
                    >
                              Please sign-in:
                    </p>
                    <FirebaseAuth
                              firebaseAuth={
                                        Object {
                                                  "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                  "appName": "[DEFAULT]",
                                                  "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                  "currentUser": null,
                                                }
                              }
                              uiCallback={[Function]}
                              uiConfig={
                                        Object {
                                                  "callbacks": Object {
                                                    "signInSuccessWithAuthResult": [Function],
                                                  },
                                                  "signInFlow": "popup",
                                                  "signInOptions": Array [
                                                    "google.com",
                                                    "facebook.com",
                                                  ],
                                                }
                              }
                    />
          </div>
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h1
            className="saved-decks-title"
>
            SAVED DECKS
</h1>,
          "className": "saved-decks-tab",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "SAVED DECKS",
            "className": "saved-decks-title",
          },
          "ref": null,
          "rendered": "SAVED DECKS",
          "type": "h1",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <p
                        className="sign-in-request"
            >
                        Please sign-in:
            </p>
            <FirebaseAuth
                        firebaseAuth={
                                    Object {
                                                "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                "appName": "[DEFAULT]",
                                                "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                "currentUser": null,
                                              }
                        }
                        uiCallback={[Function]}
                        uiConfig={
                                    Object {
                                                "callbacks": Object {
                                                  "signInSuccessWithAuthResult": [Function],
                                                },
                                                "signInFlow": "popup",
                                                "signInOptions": Array [
                                                  "google.com",
                                                  "facebook.com",
                                                ],
                                              }
                        }
            />
</div>,
          "className": "saved-decks-container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="sign-in-request"
>
                Please sign-in:
</p>,
              <FirebaseAuth
                firebaseAuth={
                                Object {
                                                "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                "appName": "[DEFAULT]",
                                                "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                "currentUser": null,
                                              }
                }
                uiCallback={[Function]}
                uiConfig={
                                Object {
                                                "callbacks": Object {
                                                  "signInSuccessWithAuthResult": [Function],
                                                },
                                                "signInFlow": "popup",
                                                "signInOptions": Array [
                                                  "google.com",
                                                  "facebook.com",
                                                ],
                                              }
                }
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Please sign-in:",
                "className": "sign-in-request",
              },
              "ref": null,
              "rendered": "Please sign-in:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "firebaseAuth": Object {
                  "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                  "appName": "[DEFAULT]",
                  "authDomain": "gh-deckbuilder.firebaseapp.com",
                  "currentUser": null,
                },
                "uiCallback": [Function],
                "uiConfig": Object {
                  "callbacks": Object {
                    "signInSuccessWithAuthResult": [Function],
                  },
                  "signInFlow": "popup",
                  "signInOptions": Array [
                    "google.com",
                    "facebook.com",
                  ],
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="saved-decks-tab"
>
            <h1
                        className="saved-decks-title"
            >
                        SAVED DECKS
            </h1>
</div>,
          <div
            className="saved-decks-container"
>
            <div>
                        <p
                                    className="sign-in-request"
                        >
                                    Please sign-in:
                        </p>
                        <FirebaseAuth
                                    firebaseAuth={
                                                Object {
                                                            "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                            "appName": "[DEFAULT]",
                                                            "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                            "currentUser": null,
                                                          }
                                    }
                                    uiCallback={[Function]}
                                    uiConfig={
                                                Object {
                                                            "callbacks": Object {
                                                              "signInSuccessWithAuthResult": [Function],
                                                            },
                                                            "signInFlow": "popup",
                                                            "signInOptions": Array [
                                                              "google.com",
                                                              "facebook.com",
                                                            ],
                                                          }
                                    }
                        />
            </div>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h1
              className="saved-decks-title"
>
              SAVED DECKS
</h1>,
            "className": "saved-decks-tab",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "SAVED DECKS",
              "className": "saved-decks-title",
            },
            "ref": null,
            "rendered": "SAVED DECKS",
            "type": "h1",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <p
                            className="sign-in-request"
              >
                            Please sign-in:
              </p>
              <FirebaseAuth
                            firebaseAuth={
                                          Object {
                                                        "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                        "appName": "[DEFAULT]",
                                                        "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                        "currentUser": null,
                                                      }
                            }
                            uiCallback={[Function]}
                            uiConfig={
                                          Object {
                                                        "callbacks": Object {
                                                          "signInSuccessWithAuthResult": [Function],
                                                        },
                                                        "signInFlow": "popup",
                                                        "signInOptions": Array [
                                                          "google.com",
                                                          "facebook.com",
                                                        ],
                                                      }
                            }
              />
</div>,
            "className": "saved-decks-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="sign-in-request"
>
                  Please sign-in:
</p>,
                <FirebaseAuth
                  firebaseAuth={
                                    Object {
                                                      "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                                                      "appName": "[DEFAULT]",
                                                      "authDomain": "gh-deckbuilder.firebaseapp.com",
                                                      "currentUser": null,
                                                    }
                  }
                  uiCallback={[Function]}
                  uiConfig={
                                    Object {
                                                      "callbacks": Object {
                                                        "signInSuccessWithAuthResult": [Function],
                                                      },
                                                      "signInFlow": "popup",
                                                      "signInOptions": Array [
                                                        "google.com",
                                                        "facebook.com",
                                                      ],
                                                    }
                  }
/>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Please sign-in:",
                  "className": "sign-in-request",
                },
                "ref": null,
                "rendered": "Please sign-in:",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "firebaseAuth": Object {
                    "apiKey": "AIzaSyBHV499x0Il6LN4XYA1JCExxTH_kgkg3pg",
                    "appName": "[DEFAULT]",
                    "authDomain": "gh-deckbuilder.firebaseapp.com",
                    "currentUser": null,
                  },
                  "uiCallback": [Function],
                  "uiConfig": Object {
                    "callbacks": Object {
                      "signInSuccessWithAuthResult": [Function],
                    },
                    "signInFlow": "popup",
                    "signInOptions": Array [
                      "google.com",
                      "facebook.com",
                    ],
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
